@@ -87,20 +87,22 @@ static int fsel_getattr(const char *path, struct stat *stbuf)
 }
 
 static int fsel_readdir(const char *path, void *buf, fuse_fill_dir_t filler,
-			off_t offset, struct fuse_file_info *fi)
+			off_t offset, struct fuse_file_info *fi,
+			enum fuse_readdir_flags flags)
 {
 	char name[2] = { };
 	int i;
 
 	(void) offset;
 	(void) fi;
+	(void) flags;
 
 	if (strcmp(path, "/") != 0)
 		return -ENOENT;
 
 	for (i = 0; i < FSEL_FILES; i++) {
 		name[0] = fsel_hex_map[i];
-		filler(buf, name, NULL, 0);
+		filler(buf, name, NULL, 0, 0);
 	}
 
 	return 0;
