@@ -1,3 +1,14 @@
+2014-03-05  Miklos Szeredi <miklos@szeredi.hu>
+
+	* libfuse: implement readdirplus for high-level API.  Reuse the
+	old "readdir" callback, but add a flags argument, that has
+	FUSE_READDIR_PLUS in case this is a "plus" version.  Filesystems
+	can safely ignore this flag, but if they want they can add
+	optimizations based on it: i.e. only retrieve the full attributes
+	in PLUS mode.  The filler function is also given a flags argument
+	and the filesystem can set FUSE_FILL_DIR_PLUS if all the
+	attributes in "stat" are valid.  Original patch by Eric Wong
+
 2014-02-21  Miklos Szeredi <miklos@szeredi.hu>
 
 	* libfuse: added fuse_lo-plus.c to the examples
